--- a/step01_variable/training01_실습.html
+++ b/step01_variable/training01_실습.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <div id="box">I'm box!</div>
+    <div id="box2">I'm box2!</div>
+    <div id="box3" onclick="text_change2(this.id);">I'm box3!</div>
     <script>
       const box = document.getElementById("box");
+      const box2 = document.getElementById("box2");
       console.log(box, typeof box); //객체다!
 
       const text_change = function () {
@@ -19,6 +22,15 @@
       };
       box.addEventListener("click", text_change); //클릭이라는 이벤트를 추가(addEventListener)
       //변수.이벤트추가('이벤트명',함수)
+      box2.onclick = function () {
+        this.innerHTML = "다른방식으로 바꿔보자!";
+      };
+
+      function text_change2(clicked_id) {
+        //alert(clicked_id);
+        const box = document.getElementById(clicked_id);
+        box.innerHTML = "온클릭으로 바꿔보자!";
+      }
     </script>
   </body>
 </html>
