--- a/step01_variable/training01_실습.html
+++ b/step01_variable/training01_실습.html
@@ -27,6 +27,7 @@
       };
 
       function text_change2(clicked_id) {
+        //id값을 받아와서 변수에 저장 후 함수 실행
         //alert(clicked_id);
         const box = document.getElementById(clicked_id);
         box.innerHTML = "온클릭으로 바꿔보자!";
