--- a/step01_variable/data types_자료형01.html
+++ b/step01_variable/data types_자료형01.html
@@ -17,17 +17,17 @@
       let f = null;
       console.log(a, b, c, d, e, f);
       /*
-      1.각변수들의 자료형 확인
-      2.
-       숫자 number
-       문자 string
-       참/거짓 boolean
-       undefined
-       ull 객체
-      */
+       1.각변수들의 자료형 확인
+       2.
+        숫자 number
+        문자 string
+        참/거짓 boolean
+        undefined
+        null 객체
+       */
       /*
-     자료형 확인 - typeof
-     */
+      자료형 확인 - typeof
+      */
       console.log(
         typeof a, //number
         typeof b, //string
@@ -38,6 +38,7 @@
       );
       let _this = this;
       //객체 지향
+
       console.log(_this);
       console.log(
         _this,
@@ -61,6 +62,44 @@
         Boolean(TE), //false
         Boolean(TF) //false
       );
+
+      /*객체 만들기*/
+      const k_object = {
+        name: "mi_suuun",
+        age: 31,
+        work: function () {
+          console.log("리액트 스터디");
+        },
+      };
+      console.log(k_object);
+      console.log(k_object.name, k_object["name"]);
+      /*
+       객체지향 프로그램
+       프로그래밍에서 필요한 데이터를 추상화시켜 상태와 행위를 가진 객체를 만들고 그 객체들 간의 유기적인 상호작용을 통해 로직을 구성하는 프로그래밍 방법
+       
+       #장점
+       -코드 재사용이 용이
+       -유지보수가 쉬움
+       -대형 프로젝트에 적합
+
+       #단점 
+       -처리 속도가 상대적으로 느림
+       -객체가 많으면 용량이 커질 수 있음
+       -설계시 많은 시간과 노력이 필요
+        https://poiemaweb.com/js-object-oriented-programming
+       */
+
+      /*배열 만들기*/
+      //const k_array = [];
+      const k_array = [1, 2, 3, 4, 5];
+      console.log(k_array);
+      console.log(k_array[0]);
+
+      /*함수 만들기*/
+      const k_function = function () {
+        return "I" + "'" + "m function";
+      };
+      console.log(k_function()); //함수 실행
     </script>
   </body>
 </html>
