--- a/step02_operator/comparison_비교.html
+++ b/step02_operator/comparison_비교.html
@@ -18,6 +18,7 @@
       console.log(a <= b); //true
       console.log(a >= b); //true
       console.log(a !== b); //true , typeof 까지 비교했을때 거짓이므로 true가 나옴
+      console.log(a != b); //false
     </script>
   </body>
 </html>
