--- a/step03_conditional/switch01.html
+++ b/step03_conditional/switch01.html
@@ -33,6 +33,11 @@
       if…else 문은 논리적 참, 거짓으로 실행할 코드 블록을 결정한다.
       하지만 switch 문은 논리적 참, 거짓보다는 다양한 상황(case)에 따라 실행할 코드 블록을 결정할 때 사용한다.
       */
+      /*
+     //data == 확인할 JSON 데이터
+    console.log(JSON.stringify(data));
+    alert(JSON.stringify(data));
+     */
     </script>
   </body>
 </html>
