--- a/step00_DOM/DOM_control.html
+++ b/step00_DOM/DOM_control.html
@@ -6,20 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM 01</title>
     <style>
-      * {
-        color: #444;
-        text-decoration: none;
-      }
+     * {
+       color: #444;
+       text-decoration: none;
+    }
 
-      .gnb > ul > li.on a {
-        color: #f00;
-      }
+    .gnb > ul > li.on a {
+      color: #f00;
+    }
+    .sum ul li.on{
+      color:blue;
+    }
+    .content > div{
+      display:none;
+    }
+    .content > div.on{
+      display:block;
+    }
     </style>
   </head>
 
   <body>
     <nav class="gnb">
-      <ul>
+      <ul id="gnb">
         <li class="on"><a href="">menu01</a></li>
         <li><a href="">menu02</a></li>
         <li><a href="">menu03</a></li>
