--- a/trn02/index.html
+++ b/trn02/index.html
@@ -175,8 +175,8 @@
                 <span>DESSERT</span>
               </h2>
               <p>
-                <span> 달콤한 아이스크림부터 </span>
-                <span>든든한 브레드 까지!</span>
+                <span class="wc"> 달콤한 아이스크림부터 </span>
+                <span class="wc">든든한 브레드 까지!</span>
               </p>
             </div>
           </div>
@@ -205,7 +205,7 @@
               <p>빽다방 소식을 전해드립니다.</p>
             </div>
             <div class="content">
-              <div class="con_top">
+              <div class="con_top swiper real_SSwiper">
                 <ul>
                   <li>
                     <a href=""><i class="xi-facebook"></i></a>
@@ -215,7 +215,70 @@
                   </li>
                 </ul>
               </div>
-              <div class="con_bot"></div>
+              <div class="con_bot">
+                <ul>
+                  <li>
+                    <a href="">
+                      <img src="./img/con0401.png" alt="" />
+                      <div class="sns_txt">
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <img src="./img/con0402.png" alt="" />
+                      <div class="sns_txt">
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <img src="./img/con0403.png" alt="" />
+                      <div class="sns_txt">
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <img src="./img/con0401.png" alt="" />
+                      <div class="sns_txt">
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <img src="./img/con0402.png" alt="" />
+                      <div class="sns_txt">
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                      </div>
+                    </a>
+                  </li>
+                  <li>
+                    <a href="">
+                      <img src="./img/con0403.png" alt="" />
+                      <div class="sns_txt">
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                      </div>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </section>
