--- a/trn02/index.html
+++ b/trn02/index.html
@@ -199,14 +199,14 @@
           </div>
         </section>
         <section class="sns_review">
-          <div class="container">
-            <div class="stit">
+          <div class="">
+            <div class="stit container">
               <h2>빽다방 SNS</h2>
               <p>빽다방 소식을 전해드립니다.</p>
             </div>
             <div class="content">
-              <div class="con_top swiper real_SSwiper">
-                <ul>
+              <div class="con_top container">
+                <ul class="flex">
                   <li>
                     <a href=""><i class="xi-facebook"></i></a>
                   </li>
@@ -215,9 +215,9 @@
                   </li>
                 </ul>
               </div>
-              <div class="con_bot">
-                <ul>
-                  <li>
+              <div class="con_bot swiper SSwiper">
+                <ul class="swiper-wrapper">
+                  <li class="swiper-slide">
                     <a href="">
                       <img src="./img/con0401.png" alt="" />
                       <div class="sns_txt">
@@ -227,7 +227,7 @@
                       </div>
                     </a>
                   </li>
-                  <li>
+                  <li class="swiper-slide">
                     <a href="">
                       <img src="./img/con0402.png" alt="" />
                       <div class="sns_txt">
@@ -237,7 +237,7 @@
                       </div>
                     </a>
                   </li>
-                  <li>
+                  <li class="swiper-slide">
                     <a href="">
                       <img src="./img/con0403.png" alt="" />
                       <div class="sns_txt">
@@ -247,7 +247,7 @@
                       </div>
                     </a>
                   </li>
-                  <li>
+                  <li class="swiper-slide">
                     <a href="">
                       <img src="./img/con0401.png" alt="" />
                       <div class="sns_txt">
@@ -257,7 +257,7 @@
                       </div>
                     </a>
                   </li>
-                  <li>
+                  <li class="swiper-slide">
                     <a href="">
                       <img src="./img/con0402.png" alt="" />
                       <div class="sns_txt">
@@ -267,7 +267,7 @@
                       </div>
                     </a>
                   </li>
-                  <li>
+                  <li class="swiper-slide">
                     <a href="">
                       <img src="./img/con0403.png" alt="" />
                       <div class="sns_txt">
