--- a/trn02/index.html
+++ b/trn02/index.html
@@ -7,6 +7,7 @@
     <title>hundred</title>
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="./css/hamburgers.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <link
       rel="stylesheet"
@@ -35,6 +36,13 @@
               <li><a href="">고객의 소리</a></li>
             </ul>
           </nav>
+          <div class="mbt">
+            <div class="hamburger hamburger--spin">
+              <div class="hamburger-box">
+                <div class="hamburger-inner"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </header>
       <main>
@@ -221,9 +229,11 @@
                     <a href="">
                       <img src="./img/con0401.png" alt="" />
                       <div class="sns_txt">
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                        <div>
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -231,9 +241,11 @@
                     <a href="">
                       <img src="./img/con0402.png" alt="" />
                       <div class="sns_txt">
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                        <div>
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -241,9 +253,11 @@
                     <a href="">
                       <img src="./img/con0403.png" alt="" />
                       <div class="sns_txt">
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                        <div>
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -251,9 +265,11 @@
                     <a href="">
                       <img src="./img/con0401.png" alt="" />
                       <div class="sns_txt">
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                        <div>
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -261,9 +277,11 @@
                     <a href="">
                       <img src="./img/con0402.png" alt="" />
                       <div class="sns_txt">
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                        <div>
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!
+                        </div>
                       </div>
                     </a>
                   </li>
@@ -271,9 +289,11 @@
                     <a href="">
                       <img src="./img/con0403.png" alt="" />
                       <div class="sns_txt">
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
-                        좋아유!좋아유!좋아유!좋아유!좋아유!
+                        <div>
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!좋아유!
+                          좋아유!좋아유!좋아유!좋아유!좋아유!
+                        </div>
                       </div>
                     </a>
                   </li>
