--- a/trn02/index.html
+++ b/trn02/index.html
@@ -13,7 +13,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"
     />
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
     <script src="./js/swiper-bundle.min.js"></script>
+    <!-- <script src="./js/imageMapResizer.min.js"></script> -->
     <script src="./js/common.js"></script>
   </head>
   <body>
@@ -196,6 +198,13 @@
               <p>늘 가까이 함께하겠습니다.</p>
             </div>
             <div class="content">
+              <div class="map_txt">
+                <h3>STORE IN <span>강원도</span></h3>
+                <strong>4444</strong>
+              </div>
+              <div class="mob_map">
+                <a href="">가까운 매장찾기</a>
+              </div>
               <div class="map">
                 <img
                   src="./img/map_gw.png"
@@ -210,9 +219,8 @@
                     data-id="map_gw"
                     data-num="4444"
                     href="gw"
-                    coords="930,617,1239,562,1410,436,1785,1110,1709,1152,1580,1133,1532,1158,1374,1104,1307,1087,1250,1097,1235,1123,1189,1108,1218,931,1119,887,1134,767,1031,674"
+                    coords="468,147,442,193,305,204,320,225,363,241,371,269,372,299,406,310,393,365,414,373,427,360,435,366,506,385,575,387,588,369"
                     shape="poly"
-                    onClick="javascript:alert('테스트입니다.');"
                   />
                   <area
                     target="_self"
@@ -220,7 +228,7 @@
                     data-id="map_gy"
                     data-num="555"
                     href="경리도링크"
-                    coords="383,198,367,239,343,256,326,285,303,318,274,322,267,346,272,372,270,422,265,434,253,412,232,410,213,417,222,457,234,471,255,486,274,493,293,495,310,488,329,495,352,474,367,462,371,431,402,434,423,445,416,460,423,474,419,490,431,495,452,495,447,514,433,531,421,547,400,559,381,559,357,554,345,561,324,542,308,528,305,545,289,601,308,618,326,635,310,642,274,661,260,668,274,690,336,685,296,711,308,739,329,711,341,737,317,763,345,789,374,773,395,761,386,789,428,773,478,799,506,780,525,761,546,737,594,730,608,687,636,687,641,666,655,602,662,553,653,522,674,505,625,496,587,477,570,463,570,427,558,397,582,359,591,337,568,309,535,283,516,264,476,255,478,236,447,248,428,252"
+                    coords="309,334,334,320,335,301,320,279,300,276,271,304,250,282,295,227,311,218,341,234,360,255,364,289,367,306,388,314,389,369,340,405,316,398,286,396,266,362,278,332,299,340"
                     shape="poly"
                   />
                   <area
@@ -229,7 +237,7 @@
                     data-id="map_se"
                     data-num="6666"
                     href=""
-                    coords="345,501,326,503,308,496,305,510,322,534,334,543,350,550,369,543,390,550,416,543,426,527,438,512,440,496,414,503,414,489,414,470,409,441,395,444,376,439,371,463,350,479"
+                    coords="324,323,297,335,276,320,282,295,310,281,327,295,331,310"
                     shape="poly"
                   />
                   <area
@@ -238,43 +246,47 @@
                     data-id="map_cb"
                     data-num="8888"
                     href="충북링크"
-                    coords="523,874,516,843,485,808,513,789,530,768,558,742,601,732,613,694,646,699,672,697,707,697,731,664,769,683,797,666,826,659,833,676,871,697,859,706,892,709,918,713,934,720,956,732,939,742,925,765,899,777,897,803,899,836,880,846,847,825,830,815,816,834,795,827,771,843,757,874,740,888,703,893,674,926,670,943,693,978,688,1030,696,1054,686,1082,705,1085,736,1096,755,1096,755,1120,733,1156,717,1175,700,1196,674,1193,655,1201,629,1193,615,1184,594,1156,573,1099,558,1080,580,1030,575,1007,563,1016,549,1000,525,990,518,964,502,950,490,931,485,912,506,881"
+                    coords="339,410,392,376,415,375,447,368,492,387,478,420,455,412,413,442,411,477,430,507,409,543,380,533,366,510,368,494,371,481,348,472,338,449,349,429"
                     shape="poly"
                   />
+
                   <area
                     target="_self"
                     alt="충남"
                     data-id="map_cn"
                     data-num="1234"
                     href="충남링크"
-                    coords="331,827,376,796,423,780,468,813,504,846,504,869,471,926,506,978,539,1009,558,1026,556,1042,523,1028,509,1047,497,1082,518,1101,551,1094,570,1120,591,1158,601,1184,584,1210,537,1215,490,1151,452,1177,409,1144,374,1151,334,1153,326,1175,260,1203,227,1153,187,1153,45,846,192,711,300,768"
+                    coords="308,410,278,419,249,387,197,430,261,540,283,531,304,515,318,516,327,526,347,523,366,546,378,535,360,514,341,511,338,492,349,476,332,449,340,427,323,405"
                     shape="poly"
                   />
+
                   <area
                     target="_self"
                     alt="대전"
                     data-id="map_dj"
                     data-num="6666"
                     href=""
-                    coords="528,1080,518,1094,502,1080,513,1049,528,1037,551,1049,554,1068,549,1080"
+                    coords="344,491,360,480,364,509,347,509"
                     shape="poly"
                   />
+
                   <area
                     target="_self"
                     alt="경북"
                     data-id="map_gb"
                     data-num="999"
                     href=""
-                    coords="704,1205,751,1169,754,1148,765,1103,754,1084,713,1072,704,1048,699,996,706,963,692,942,713,904,777,864,787,840,848,840,879,855,912,835,917,783,945,754,974,745,1026,743,1035,719,1059,733,1092,733,1127,731,1149,731,1187,752,1220,698,1248,721,1274,1026,1253,1134,1253,1174,1248,1205,1312,1179,1319,1223,1307,1261,1310,1306,1293,1330,1281,1356,1255,1358,1227,1361,1191,1339,1163,1349,1127,1365,1101,1377,1059,1377,1038,1401,1007,1403,959,1398,945,1370,905,1375,889,1387,860,1372,818,1380,825,1335,735,1285,896,1281,913,1291,925,1317,977,1317,1017,1310,1024,1286,1026,1269,1029,1232,996,1194,965,1217,937,1220,922,1239,918,1255,899,1331,705,1260,707,1262,700,1248,719,1272,702,1248,707,1220,714,1253,702,1248"
+                    coords="484,583,508,589,538,560,527,541,508,529,483,541,474,565,448,581,434,570,418,562,433,529,428,471,417,453,456,433,476,425,510,395,554,389,590,384,592,413,595,444,588,481,590,528,594,551,612,568,606,593,573,584,549,595,524,603,502,603,475,598,454,595,448,581,474,564"
                     shape="poly"
                   />
+
                   <area
                     target="_self"
                     alt="대구"
                     data-id="map_dg"
                     data-num="90"
                     href=""
-                    coords="915,1279,933,1260,936,1236,934,1227,962,1226,995,1207,1015,1217,1015,1236,1012,1243,1023,1262,1019,1273,1010,1278,1006,1306,1000,1311,973,1300,961,1306,947,1317,933,1305,916,1291"
+                    coords="480,560,507,537,527,556,512,584,483,580"
                     shape="poly"
                   />
                   <area
@@ -283,7 +295,7 @@
                     data-id="map_jb"
                     data-num="555"
                     href=""
-                    coords="452,1173,489,1158,510,1181,519,1200,546,1221,587,1223,594,1207,613,1196,622,1200,637,1200,654,1205,684,1197,694,1214,702,1221,703,1242,700,1254,682,1268,649,1287,613,1327,606,1360,597,1396,593,1423,606,1443,610,1467,619,1481,611,1494,599,1494,596,1518,583,1530,565,1515,545,1502,506,1524,467,1526,450,1521,412,1530,389,1527,399,1509,391,1469,378,1459,357,1483,346,1486,337,1468,312,1453,295,1447,283,1460,273,1481,269,1499,243,1511,199,1526,187,1492,165,1456,182,1440,211,1423,247,1424,261,1414,258,1392,224,1395,196,1394,184,1377,192,1364,238,1323,263,1304,294,1324,302,1314,300,1300,268,1279,295,1280,311,1252,273,1263,232,1250,244,1227,318,1185,326,1185,326,1165,357,1145,373,1152,404,1145,430,1169"
+                    coords="256,554,287,535,307,532,346,538,368,555,386,544,412,551,376,590,377,634,372,648,354,640,329,645,314,644,316,626,297,620,277,620,264,636,246,643,239,624,256,618,255,606,239,602,261,576,268,568"
                     shape="poly"
                   />
                   <area
@@ -292,7 +304,7 @@
                     data-id="map_gg"
                     data-num="555"
                     href="광주링크"
-                    coords="384,1593,371,1636,342,1629,321,1624,328,1611,320,1595,324,1573,341,1560,346,1554"
+                    coords="280,668,294,655,309,676,302,695,282,681"
                     shape="poly"
                   />
                   <area
@@ -301,7 +313,7 @@
                     data-id="map_jn"
                     data-num="9999"
                     href="전남링크"
-                    coords="332,1549,313,1582,312,1596,311,1621,363,1637,393,1619,391,1585,333,1546,379,1525,412,1524,441,1522,472,1530,499,1527,543,1501,583,1532,590,1568,613,1603,643,1645,652,1669,653,1680,614,1690,603,1712,564,1722,541,1751,525,1840,466,1879,422,1902,343,1922,283,1928,211,1924,110,1924,50,1832,54,1695,74,1577,125,1517,144,1503,164,1504,155,1477,161,1466,184,1505,186,1523,191,1535,230,1519,266,1506,280,1492,286,1467,307,1453,325,1466,335,1482,347,1485,363,1486,373,1472,386,1463,390,1486,390,1513,359,1537,370,1530"
+                    coords="281,683,298,696,308,694,314,677,306,661,296,650,274,663,264,644,274,639,278,628,290,634,300,637,308,640,308,652,321,654,343,654,360,648,372,658,374,671,396,698,398,737,290,804,232,780,192,786,202,696,220,660,232,640,241,654,264,644,273,663"
                     shape="poly"
                   />
                   <area
@@ -310,7 +322,7 @@
                     data-id="map_kn"
                     data-num="1010"
                     href=""
-                    coords="599,1527,605,1567,610,1591,645,1629,668,1667,668,1681,697,1691,715,1693,725,1781,845,1851,917,1851,1014,1798,1055,1767,1090,1708,1024,1661,1015,1618,1034,1604,1059,1580,1073,1560,1104,1557,1120,1558,1125,1541,1130,1533,1156,1526,1163,1508,1162,1496,1183,1488,1161,1462,1124,1448,1099,1429,1127,1407,1117,1382,1085,1379,1071,1394,1058,1405,1034,1409,1002,1402,958,1404,936,1388,913,1395,884,1398,862,1376,819,1380,804,1370,812,1332,794,1313,778,1295,751,1300,732,1286,706,1267,698,1265,676,1276,655,1293,639,1317,620,1337,610,1378,609,1409,614,1438,613,1456,626,1481,613,1495,605,1498"
+                    coords="384,636,380,603,406,573,440,584,441,599,453,611,465,607,487,611,510,615,529,617,545,607,546,626,565,631,563,646,543,662,521,672,520,678,521,732,450,763,407,730,393,677,377,664"
                     shape="poly"
                   />
                   <area
@@ -319,7 +331,7 @@
                     data-id="map_us"
                     data-num="233"
                     href=""
-                    coords="1201,1488,1176,1459,1168,1444,1155,1435,1144,1426,1121,1426,1134,1407,1130,1388,1160,1356,1176,1342,1200,1348,1214,1364,1234,1374,1254,1360,1268,1366,1281,1367,1284,1386,1277,1428,1272,1445,1244,1503"
+                    coords="593,641,574,633,558,620,548,615,559,609,570,590,582,597,591,602,598,597,610,603,604,624"
                     shape="poly"
                   />
                   <area
@@ -328,7 +340,7 @@
                     data-id="map_busan"
                     data-num="333"
                     href=""
-                    coords="1205,1110,1199,1032,1218,937,1180,902,1121,889,1117,832,1138,750,1100,712,1031,672,989,645,965,670,925,615,1128,560,1317,575,1387,512,1399,434,1441,461,1536,661,1776,1104,1743,1135,1711,1156,1677,1131,1618,1144,1568,1125,1551,1150,1481,1140,1391,1108,1359,1070,1304,1091"
+                    coords="524,676,540,667,570,641,587,643,593,655,580,682,554,692,535,689"
                     shape="poly"
                   />
                   <area
@@ -337,14 +349,10 @@
                     data-id="map_jj"
                     data-num="1004"
                     href=""
-                    coords="24,2428,89,2368,279,2313,352,2359,347,2444,265,2470,142,2482,71,2479"
+                    coords="203,976,187,946,218,923,272,911,306,924,289,956"
                     shape="poly"
                   />
                 </map>
-                <div class="map_txt">
-                  <h3>STORE IN <span>GANWON</span></h3>
-                  <strong>1,687</strong>
-                </div>
               </div>
             </div>
           </div>
