--- a/trn03/index.html
+++ b/trn03/index.html
@@ -20,113 +20,135 @@
   </head>
   <body>
     <header>
-      <h1>
-        <a href="">
-          <img src="./img/logo.png" alt="" />
-        </a>
-      </h1>
-      <nav>
-        <ul>
-          <li>
-            <a href="">회사소개</a>
-            <div class="submenu">
-              <div class="sub_tit">
-                <h2>About</h2>
-                <p>
-                  <span>365일 웃음 가득, 행복 가득. 언제나 고객과 </span>
-                  <span>함께 합니다.고객이 웃을 때 오뚜기는 행복합니다. </span>
-                </p>
+      <div class="inner flex">
+        <h1>
+          <a href="">
+            <img src="./img/logo.png" alt="" />
+          </a>
+        </h1>
+        <nav>
+          <ul class="flex">
+            <li>
+              <a href="">회사소개</a>
+              <div class="submenu on">
+                <div class="inner flex">
+                  <div class="sub_tit">
+                    <h2>About</h2>
+                    <p>
+                      <span>365일 웃음 가득, 행복 가득. 언제나 고객과 </span>
+                      <span
+                        >함께 합니다.고객이 웃을 때 오뚜기는 행복합니다.
+                      </span>
+                    </p>
+                  </div>
+                  <div class="sub_real_menu">
+                    <ul>
+                      <li><a href="">(주)오뚜기</a></li>
+                      <li><a href="">인재채용</a></li>
+                      <li><a href="">찾아오시는길</a></li>
+                    </ul>
+                  </div>
+                </div>
               </div>
-              <div class="sub_real_menu">
-                <ul>
-                  <li><a href="">(주)오뚜기</a></li>
-                  <li><a href="">인재채용</a></li>
-                  <li><a href="">찾아오시는길</a></li>
-                </ul>
+            </li>
+            <li>
+              <a href="">ESG경영</a>
+              <div class="submenu">
+                <div class="inner flex">
+                  <div class="sub_tit">
+                    <h2>About</h2>
+                    <p>
+                      <span>365일 웃음 가득, 행복 가득. 언제나 고객과 </span>
+                      <span
+                        >함께 합니다.고객이 웃을 때 오뚜기는 행복합니다.
+                      </span>
+                    </p>
+                  </div>
+                  <div class="sub_real_menu">
+                    <ul>
+                      <li><a href="">서브메뉴2</a></li>
+                      <li><a href="">서브메뉴3</a></li>
+                      <li><a href="">서브메뉴4</a></li>
+                    </ul>
+                  </div>
+                </div>
               </div>
-            </div>
-          </li>
-          <li>
-            <a href="">ESG경영</a>
-            <div class="submenu">
-              <div class="sub_tit">
-                <h2>About</h2>
-                <p>
-                  <span>365일 웃음 가득, 행복 가득. 언제나 고객과 </span>
-                  <span>함께 합니다.고객이 웃을 때 오뚜기는 행복합니다. </span>
-                </p>
+            </li>
+            <li>
+              <a href="">제품정보</a>
+              <div class="submenu">
+                <div class="inner flex">
+                  <div class="sub_tit">
+                    <h2>About</h2>
+                    <p>
+                      <span>365일 웃음 가득, 행복 가득. 언제나 고객과 </span>
+                      <span
+                        >함께 합니다.고객이 웃을 때 오뚜기는 행복합니다.
+                      </span>
+                    </p>
+                  </div>
+                  <div class="sub_real_menu">
+                    <ul>
+                      <li><a href="">서브메뉴2</a></li>
+                      <li><a href="">서브메뉴3</a></li>
+                      <li><a href="">서브메뉴4</a></li>
+                    </ul>
+                  </div>
+                </div>
               </div>
-              <div class="sub_real_menu">
-                <ul>
-                  <li><a href="">서브메뉴2</a></li>
-                  <li><a href="">서브메뉴3</a></li>
-                  <li><a href="">서브메뉴4</a></li>
-                </ul>
+            </li>
+            <li>
+              <a href="">O'Kitchen</a>
+            </li>
+            <li>
+              <a href="">홍보센터</a>
+              <div class="submenu">
+                <div class="flex inner">
+                  <div class="sub_tit">
+                    <h2>About</h2>
+                    <p>
+                      <span>365일 웃음 가득, 행복 가득. 언제나 고객과 </span>
+                      <span
+                        >함께 합니다.고객이 웃을 때 오뚜기는 행복합니다.
+                      </span>
+                    </p>
+                  </div>
+                  <div class="sub_real_menu">
+                    <ul>
+                      <li><a href="">서브메뉴2</a></li>
+                      <li><a href="">서브메뉴3</a></li>
+                      <li><a href="">서브메뉴4</a></li>
+                    </ul>
+                  </div>
+                </div>
               </div>
-            </div>
-          </li>
-          <li>
-            <a href="">제품정보</a>
-            <div class="submenu">
-              <div class="sub_tit">
-                <h2>About</h2>
-                <p>
-                  <span>365일 웃음 가득, 행복 가득. 언제나 고객과 </span>
-                  <span>함께 합니다.고객이 웃을 때 오뚜기는 행복합니다. </span>
-                </p>
+            </li>
+            <li>
+              <a href="">고객서비스</a>
+              <div class="submenu">
+                <div class="inner flex">
+                  <div class="sub_tit">
+                    <h2>About</h2>
+                    <p>
+                      <span>365일 웃음 가득, 행복 가득. 언제나 고객과 </span>
+                      <span
+                        >함께 합니다.고객이 웃을 때 오뚜기는 행복합니다.
+                      </span>
+                    </p>
+                  </div>
+                  <div class="sub_real_menu">
+                    <ul>
+                      <li><a href="">서브메뉴2</a></li>
+                      <li><a href="">서브메뉴3</a></li>
+                      <li><a href="">서브메뉴4</a></li>
+                    </ul>
+                  </div>
+                </div>
               </div>
-              <div class="sub_real_menu">
-                <ul>
-                  <li><a href="">서브메뉴2</a></li>
-                  <li><a href="">서브메뉴3</a></li>
-                  <li><a href="">서브메뉴4</a></li>
-                </ul>
-              </div>
-            </div>
-          </li>
-          <li>
-            <a href="">O'Kitchen</a>
-          </li>
-          <li>
-            <a href="">홍보센터</a>
-            <div class="submenu">
-              <div class="sub_tit">
-                <h2>About</h2>
-                <p>
-                  <span>365일 웃음 가득, 행복 가득. 언제나 고객과 </span>
-                  <span>함께 합니다.고객이 웃을 때 오뚜기는 행복합니다. </span>
-                </p>
-              </div>
-              <div class="sub_real_menu">
-                <ul>
-                  <li><a href="">서브메뉴2</a></li>
-                  <li><a href="">서브메뉴3</a></li>
-                  <li><a href="">서브메뉴4</a></li>
-                </ul>
-              </div>
-            </div>
-          </li>
-          <li>
-            <a href="">고객서비스</a>
-            <div class="submenu">
-              <div class="sub_tit">
-                <h2>About</h2>
-                <p>
-                  <span>365일 웃음 가득, 행복 가득. 언제나 고객과 </span>
-                  <span>함께 합니다.고객이 웃을 때 오뚜기는 행복합니다. </span>
-                </p>
-              </div>
-              <div class="sub_real_menu">
-                <ul>
-                  <li><a href="">서브메뉴2</a></li>
-                  <li><a href="">서브메뉴3</a></li>
-                  <li><a href="">서브메뉴4</a></li>
-                </ul>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </nav>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <div class="blog-slider swiper">
       <div class="blog-slider__wrp swiper-wrapper">
