--- a/trn03/index.html
+++ b/trn03/index.html
@@ -30,7 +30,7 @@
           <ul class="flex">
             <li>
               <a href="">회사소개</a>
-              <div class="submenu on">
+              <div class="submenu">
                 <div class="inner flex">
                   <div class="sub_tit">
                     <h2>About</h2>
@@ -202,60 +202,63 @@
                 </div>
               </div>
             </div>
-            <div class="sl_bt container flex">
+            <div class="swiper-pagination"></div>
+            <!-- <div class="sl_bt container flex">
               <div class="swiper-button-prev">
                 <span class="material-icons"> arrow_back_ios </span>
               </div>
               <div class="swiper-button-next">
                 <span class="material-icons"> arrow_back_ios </span>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <div class="blog-slider__item swiper-slide new_product">
-          <div class="sec_tit">
-            <h2>신제품</h2>
-            <p>오뚜기의 인기상품들을 소개 합니다.</p>
-          </div>
-          <div class="content">
-            <ul>
-              <li>
-                <a href="">
-                  <div class="img_bg">
-                    <img src="./img/item01.jpg" alt="" />
-                  </div>
-                  <h3>프레스코 미트 스파게티소스</h3>
-                  <strong>#조미소스 #식품</strong>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <div class="img_bg">
-                    <img src="./img/item04.jpg" alt="" />
-                  </div>
-                  <h3>컵누들 로제맛</h3>
-                  <strong>#라면류 #컵누들</strong>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <div class="img_bg">
-                    <img src="./img/item05.jpg" alt="" />
-                  </div>
-                  <h3>진라면</h3>
-                  <strong>#라면류 #진라면 매운맛</strong>
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  <div class="img_bg">
-                    <img src="./img/item06.jpg" alt="" />
-                  </div>
-                  <h3>컵누들 매콤찜닭맛 컵</h3>
-                  <strong>#라면류 #컵누들</strong>
-                </a>
-              </li>
-            </ul>
+          <div class="inner">
+            <div class="sec_tit">
+              <h2>신제품</h2>
+              <p>오뚜기의 인기상품들을 소개 합니다.</p>
+            </div>
+            <div class="content">
+              <ul class="flex">
+                <li>
+                  <a href="">
+                    <div class="img_bg">
+                      <img src="./img/item01.jpg" alt="" />
+                    </div>
+                    <h3>프레스코 미트 스파게티소스</h3>
+                    <strong>#조미소스 #식품</strong>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <div class="img_bg">
+                      <img src="./img/item04.jpg" alt="" />
+                    </div>
+                    <h3>컵누들 로제맛</h3>
+                    <strong>#라면류 #컵누들</strong>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <div class="img_bg">
+                      <img src="./img/item05.jpg" alt="" />
+                    </div>
+                    <h3>진라면</h3>
+                    <strong>#라면류 #진라면 매운맛</strong>
+                  </a>
+                </li>
+                <li>
+                  <a href="">
+                    <div class="img_bg">
+                      <img src="./img/item06.jpg" alt="" />
+                    </div>
+                    <h3>컵누들 매콤찜닭맛 컵</h3>
+                    <strong>#라면류 #컵누들</strong>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="blog-slider__item swiper-slide recipe">
